stuck on stopping the modals from opening together

--- a/portfolio/src/components/portfolio/portfolio.scss
+++ b/portfolio/src/components/portfolio/portfolio.scss
@@ -159,11 +159,11 @@
         font-weight: 600;
         border: none;
         border-radius: 47%;
-        background-color: rgb(122, 4, 4);
+        background-color: rgb(4, 134, 59);
 
 
         &:hover {
-            border: solid 2px rgb(122, 4, 4);
+            border: solid 2px rgb(4, 134, 59);
             border-width: medium;
             background-color: transparent;
             font-weight: 900;
@@ -188,11 +188,11 @@
         font-weight: 600;
         border-radius: 47%;
         border: none;
-        background-color: rgb(122, 4, 4);
+        background-color: rgb(4, 134, 59);
 
 
         &:hover {
-            border: solid 2px rgb(122, 4, 4);
+            border: solid 2px rgb(4, 134, 59);
             border-width: medium;
             background-color: transparent;
             font-weight: 900;
